# simple-modbus

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.drawio  simple_modbus.h  simple_modbus_rtu.c  simple_modbus_rtu.h  simple_modbus_server.c
.github/workflows/: ci.yml
examples/stm32/: ModbusPollWorkspace.mbw  ReadRegs.mbp  WriteRegs.mbp
examples/stm32/smb-stm32-rtos/: .cproject  .mxproject  .project  smb-stm32-rtos.ioc
examples/stm32/smb-stm32-rtos/Inc/: app_freertos.h  main.h  stm32c0xx_it.h
examples/stm32/smb-stm32-rtos/Src/: app_freertos.c  main.c  stm32c0xx_hal_msp.c  stm32c0xx_hal_timebase_tim.c  stm32c0xx_it.c
examples/stm32/smb-stm32-superloop/: .cproject  .mxproject  .project  setup.txt  smb-stm32-superloop Debug.launch  smb-stm32-superloop.ioc  smb-stm32-superloop.launch
examples/stm32/smb-stm32-superloop/Inc/: main.h  stm32c0xx_it.h
examples/stm32/smb-stm32-superloop/Src/: main.c  stm32c0xx_hal_msp.c  stm32c0xx_it.c
test/: CMakeLists.txt  test_common.h  test_rtu_config.cpp  test_rtu_state_machine.cpp  test_server_config.cpp  test_server_f03.cpp  test_server_f04.cpp  test_server_f06.cpp  test_server_f16.cpp  test_server_read_pdu.cpp
